--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
     <style>
       .main {
         width: 100%;
+        height: 50vh;
+      }
+
+      #visual {
+        position: relative;
         height: 100%;
-        /*position: absolute;*/
-      }
-      .big {
-          width: 80%;
-          float: left;
       }
 
-      .small {
-        width: 20%;
-        float: right;
-      }
-
-      #visual svg, #visual img {
+      #visual svg,#visual img {
         position: absolute;
-        top: 100;
-        left:100;
+        top:0;
       }
 
       #words svg {
         border: 1px solid #CCC;
+      }
+
+      #chat {
+        list-style: none;
+        border: 1px solid #CCC;
+        height: 100%;
+      }
+
+      #chat li {
+        margin-bottom: 0;
       }
     </style>
     <script src="js/d3.v3.js" charset="utf-8"></script>
@@ -36,23 +40,22 @@
     <div class="main container">
       <h1>The Infernal Meme Machine</h1>
       <div class="row">
-        <div id="visual" class="big six columns">
+        <div id="visual" class="four columns">
           <img class="gif-target" src="" alt="">
           <div id="words"></div>
         </div>
-        <div class="small six columns">
-
+        <div class="small four columns">
           <div id="colorPicker">
-            <p>Pick a color : 
+            <p>Pick a color :
               <svg></svg>
-            </p
+            </p>
           </div>
-
           <form action="" id="talk">
             <input type="text" name="talk" id="talkbox">
             <input type="submit" value="Say it!" id="talk-btn">
           </form>
-
+        </div>
+        <div class="four columns">
           <ul id="chat">
           </ul>
         </div>
